--- a/public/css/style.css
+++ b/public/css/style.css
@@ -948,7 +948,7 @@
 		color: #ffffff;
 		cursor: default;
 		font-size: 1.1em;
-		/*height: 6em;*/
+		height: 6em;
 		line-height: 6em;
 		width: 100%;
 		z-index: 10000;
