--- a/public/css/search_style.css
+++ b/public/css/search_style.css
@@ -1,30 +1,28 @@
 /*search page*/
 
-#search {
-	text-align: left;
+#search, #first-result{
+	width: 98%; 
+	margin: 0 auto;
 }
 
-#search form{
+#search div#first-search{
+	min-width: 500px;
+}
+
+#first-search div.content{
+	width: 70%;
+	max-width: 700px;
+}
+
+#search div#second-search{
+	min-width: 450px; 
 	position: relative;
 }
 
-#search label  {
-	font-size: 1.2em;
+#second-search div.content{
+	width: 80%;
+	max-width: 700px;
 }
-
-#search button {
-	background: #3CADD4;
-	text-align: center;
-}
-
-
-#search-results .container{
-	display: inline-block;
-
-	margin-top: 50px;
-	width: 60%;
-}
-
 
 div#form-border{
 	border: 3px solid #0C8DB9;
@@ -38,20 +36,11 @@ div#form-border:hover{
 }
 
 
-#search #submit {
-	/*margin-left: 50px;*/
-	position: absolute;
-}
-
-div#submit {
-	position: relative;
-	width: 80%;
-    margin-left: 0px;
-}
 
 /*end search page*/
 
-/*search results*/
+
+/* second search results*/
 
 
 div#icon {
@@ -137,22 +126,6 @@ div.result:hover {
 	background-color: #1F7433;
 	border-color: #1F7433;
 }
-
-/*--------------- option2 */
-/*#ball .btn {
-	border: 2px solid #0C8DB9;
-	border-radius: 25px;
-	color: #0C8DB9;
-}
-
-#ball .btn:hover {
-	color: #FFF;
-	background: #0C8DB9;
-}*/
-
-/*--------------------------*/
-
-
 
 /*end search results*/
 
