--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1250,7 +1250,12 @@
 	background: rgba(144, 144, 144, 0.075);
 	border-radius: 4px;
 	display: inline-block;
-	padding: 50px;
+	padding: 30px 50px;
+	width: 350px;
+}
+
+.auth-btn {
+	margin-top: 30px;
 }
 
 .formula_row {
