--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1040,7 +1040,7 @@
 		text-align: center;
 	}
 	#banner {
-		background-image: url(../images/dark_tint.png), url(../images/creative-white.jpg);
+		/*background-image: url(../images/creative-white.jpg);*/
 		background-position: center center;
 		background-size: cover;
 		color: #ffffff;
